# file_system

./: .gitmodules  CMakeLists.txt  README.md  config-inode.json  config.json
include/block_manager/: block_manager.h
include/cli/: terminal_app.h
include/file_systems/: fat_system.h  file_descriptor.h  file_system.h  file_systems.h  inode_system.h
include/fs_driver/: fs_driver.h
include/fs_models/: fat_model.h  fs_model.h  inode_model.h
include/sec_mem_driver/: sec_mem_driver.h
src/: main.cpp
src/block_manager/: block_manager.cpp
src/cli/: format_tool.cpp  terminal.cpp  terminal_app.cpp
src/file_systems/: fat_system.cpp  file_descriptor.cpp  file_system.cpp  inode_system.cpp
src/fs_driver/: fs_driver.cpp
src/fs_models/: fat_model.cpp  inode_model.cpp
src/sec_mem_driver/: sec_mem_driver.cpp
